force-app/main/default/objects/ringdna__Call_Flow_Step__c/ringdna__Call_Flow_Step__c.object-meta.xml
<CustomObject>
    <label>Call Flow Step</label>
    <nameField>
        <label>Call Flow Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>