force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Audio_Filename__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Audio_Filename__c</fullName>
    <label>Audio Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>