force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Call_Flow__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Flow__c</fullName>
    <label>Call Flow</label>
    <referenceTo>ringdna__Call_Flow__c</referenceTo>
    <relationshipLabel>Call Flow Steps</relationshipLabel>
    <relationshipName>Call_Flow_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>