force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Dial_Destination__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Dial_Destination__c</fullName>
    <label>Dial Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>