force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Dial_Type__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Dial_Type__c</fullName>
    <label>Dial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Call Queue</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>