force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Input__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Input__c</fullName>
    <label>Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>