force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Order__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>