force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Speech_Confidence__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Speech_Confidence__c</fullName>
    <label>Speech Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>