force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Speech_Result__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Speech_Result__c</fullName>
    <label>Speech Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>