force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>