force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Type__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dial</fullName>
            </value>
            <value>
                <fullName>Greeting</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Hangup</fullName>
            </value>
            <value>
                <fullName>Callout</fullName>
            </value>
            <value>
                <fullName>Loop</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Entered Queue</fullName>
            </value>
            <value>
                <fullName>Queue Call Connected</fullName>
            </value>
            <value>
                <fullName>Queue Call Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>