force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/ringdna__Valid_Response__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Valid_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Response</label>
    <type>Checkbox</type>
</CustomField>