force-app/main/default/objects/ringdna__Call_Flow_Step__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>