force-app/main/default/objects/ringdna__Call_Flow_Step__c/listViews/ringdna__All.listView-meta.xml
<ListView>
    <fullName>ringdna__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>